--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html {
 body {
   background-color: #f5f5f5;
   overflow-x: hidden;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
 
 h1,
